# orange

./: .env.example  .gitignore  BACKLOG-TODO-LIST.md  CLAUDE.md  ORANGE-CONTEXT-ENGINEERING-PROMPT.md  PLANNING.md  README.md  TASK.md  pyproject.toml  requirements.txt  setup.py  start.sh
docs/: ipa-decryption-implementation-plan.md  literature-review-ios-emulation.md  playcover-integration.md  streaming-content-research.md
orange/: __init__.py  __main__.py  config.py  constants.py  exceptions.py
orange/cli/: __init__.py  main.py
orange/cli/commands/: __init__.py  apps.py  backup.py  context.py  device.py  export.py  files.py
orange/core/: __init__.py  context.py
orange/core/apps/: __init__.py  manager.py  models.py
orange/core/apps/decrypt/: __init__.py  dumper.py  exceptions.py  frida_client.py  ipa_builder.py  macho.py
orange/core/backup/: __init__.py  manager.py  models.py  reader.py
orange/core/connection/: __init__.py  device.py  manager.py  pairing.py  wireless.py
orange/core/export/: __init__.py  calendar.py  contacts.py  messages.py  models.py  notes.py
orange/core/transfer/: __init__.py  browser.py  categories.py  manager.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_commands.py
tests/core/: __init__.py  test_context.py
tests/core/apps/: __init__.py  test_manager.py  test_models.py
tests/core/apps/decrypt/: __init__.py  test_exceptions.py  test_frida_client.py  test_ipa_builder.py  test_macho.py
tests/core/backup/: test_manager.py  test_models.py  test_reader.py
tests/core/connection/: __init__.py  test_device.py  test_manager.py  test_pairing.py
tests/core/export/: __init__.py  test_calendar.py  test_contacts.py  test_messages.py  test_models.py  test_notes.py
tests/core/transfer/: __init__.py  test_browser.py  test_categories.py  test_manager.py
